--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "vanilla-app-template",
+  "name": "web-development-playground",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/vanilla-app-template/",
+    "build": "vite build --base=/web-development-playground/",
     "preview": "vite preview"
   },
   "devDependencies": {
@@ -14,9 +14,10 @@
     "postcss-sort-media-queries": "^5.2.0",
     "vite": "^5.4.2"
   },
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Deniz Sofia Ulutaş <denizsofia03@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-inject": "^1.1.2"
   }
